Autenticação destinguida para PJ e PF
