# src/routes/auth.route.js
@@ -1,8 +1,9 @@
 import { Router } from "express";
 const router = Router();
 
-import {login} from "../controllers/auth.controller.js"
+import {loginPessoaFisica, loginPessoaJuridica} from "../controllers/auth.controller.js"
 
-router.post("/", login);
+router.post("/", loginPessoaFisica);
+router.post("/", loginPessoaJuridica);
 
 export default router;
